c4prj2_input/grade.txt
Grading at Tue Oct  2 02:36:02 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:23:23: error: request for member ‘decks’ in something not a structure or union
   if (fc == NULL || fc.decks == NULL) {
                       ^
Compilation of future.c failed

Overall Grade: F
